--- a/website/templates/admin/new_group.html
+++ b/website/templates/admin/new_group.html
@@ -56,12 +56,12 @@
                 <input type='text' id='projectTitle' name='projectTitle'><br>
                 <label for="program">Program:</label>
                 <select name="program" id='program'>
-                    <option value='agd'>BSIT - AGD</option>
-                    <option value='da'>BSIT - DA</option>
-                    <option value='smba'>BSIT - SMBA</option>
-                    <option value='wma'>BSIT - WMA</option>
-                    <option value='bscs'>BSCS</option>
-                    <option value='bma'>BMA</option>
+                    <option value='BSIT-AGD'>BSIT-AGD</option>
+                    <option value='BSIT-DA'>BSIT-DA</option>
+                    <option value='BSIT-SMBA'>BSIT-SMBA</option>
+                    <option value='BSIT-WMA'>BSIT-WMA</option>
+                    <option value='BSCS'>BSCS</option>
+                    <option value='BMA'>BMA</option>
                 </select>
                 <br>
                 
