--- a/website/templates/admin/edit_group.html
+++ b/website/templates/admin/edit_group.html
@@ -48,23 +48,25 @@
 
             <div>
                 <p>Editing Group</p>
-                <label for="groupCode">Group Code:</label>
-                <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
-                <label for="groupName">Group Name:</label>
-                <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'><br>
-                <label for="projectTitle">Project Title:</label>
-                <input type='text' id='projectTitle' name='projectTitle' value='{{ to_edit.project_title }}'><br>
-                <label for="program">Program:</label>
-                <select name="program" id='program'>
-                    <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
-                    <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
-                    <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
-                    <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
-                    <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
-                    <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
-                </select>
-                <br>
-                <button id='submit' name='submit'>Submit</button>
+                <form method="POST">
+                    <label for="groupCode">Group Code:</label>
+                    <input type='text' id='groupCode' name='groupCode' value ="{{ to_edit.id }}" disabled><br>
+                    <label for="groupName">Group Name:</label>
+                    <input type='text' id='groupName' name='groupName' value='{{ to_edit.name }}'><br>
+                    <label for="projectTitle">Project Title:</label>
+                    <input type='text' id='projectTitle' name='projectTitle' value='{{ to_edit.project_title }}'><br>
+                    <label for="program">Program:</label>
+                    <select name="program" id='program'>
+                        <option value='BSIT-AGD' {% if to_edit.program == 'BSIT-AGD' %}selected {% endif %}>BSIT-AGD</option>
+                        <option value='BSIT-DA' {% if to_edit.program == 'BSIT-DA' %}selected {% endif %}>BSIT-DA</option>
+                        <option value='BSIT-SMBA' {% if to_edit.program == 'BSIT-SMBA' %}selected {% endif %}>BSIT-SMBA</option>
+                        <option value='BSIT-WMA' {% if to_edit.program == 'BSIT-WMA' %}selected {% endif %}>BSIT-WMA</option>
+                        <option value='BSCS' {% if to_edit.program == 'BSCS' %}selected {% endif %}>BSCS</option>
+                        <option value='BMA' {% if to_edit.program == 'BMA' %}selected {% endif %}>BMA</option>
+                    </select>
+                    <br>
+                    <button id='submit' name='submit'>Submit</button>
+                </form>
             </div>
         </div>
     </div>
@@ -85,122 +87,4 @@
             </div>
         {% endfor %}
     {% endif %}
-
-    
-    <script>
-        var arrValues = new Array();
-        var arrHead = new Array();
-        var dict = {}
-        arrHead = ['', 'Student Number', 'Last Name', 'First Name', 'Middle Initial']; // table headers.
-        var empTable = document.createElement('table');
-        empTable.setAttribute('id', 'empTable');  // table id.
-        var tr = empTable.insertRow(-1);
-
-
-        console.log(dict);
-        for (var h = 0; h < arrHead.length; h++) {
-            var th = document.createElement('th'); // the header object.
-            th.innerHTML = arrHead[h];
-            tr.appendChild(th);
-        }
-
-        var div = document.getElementById('cont');
-        div.appendChild(empTable);    // add table to a container.
-        // first create a TABLE structure by adding few headers.
-
-        // function to add new row.
-        function addRow() {
-            var empTab = document.getElementById('empTable');
-            var totalProp = parseInt(document.getElementById('totalProp').value);
-            var rowCnt = empTab.rows.length;    // get the number of rows.
-            var tr = empTab.insertRow(rowCnt); // table row.
-            tr = empTab.insertRow(rowCnt);
-            
-            if (totalProp == 4) {
-                return;
-            } 
-
-            for (var c = 0; c < arrHead.length; c++) {
-                var td = document.createElement('td');          // TABLE DEFINITION.
-                td = tr.insertCell(c);
-
-                if (c == 0) {   // if its the first column of the table.
-                    // add a button control.
-                    var button = document.createElement('input');
-
-                    // set the attributes.
-                    button.setAttribute('type', 'button');
-                    button.setAttribute('value', 'Remove');
-
-                    // add button's "onclick" event.
-                    button.setAttribute('onclick', 'removeRow(this)');
-
-                    td.appendChild(button);
-                }
-                else {
-                    // the 2nd, 3rd and 4th column, will have textbox.
-                    var ele = document.createElement('input');
-                    ele.setAttribute('type', 'text');
-                    ele.setAttribute('value', '');
-
-                    td.appendChild(ele);
-                }
-            }
-            document.getElementById('totalProp').value = totalProp + 1;
-        }
-
-        // function to delete a row.
-        function removeRow(oButton) {
-            var empTab = document.getElementById('empTable');
-            empTab.deleteRow(oButton.parentNode.parentNode.rowIndex); // buttton -> td -> tr
-            document.getElementById('totalProp').value = parseInt(document.getElementById('totalProp').value) - 1
-        }
-
-        // function to extract and submit table data.
-        function submit() {
-            var myTab = document.getElementById('empTable');
-            dict['group_name'] = document.getElementById('groupName').value;
-            dict['project_title'] = document.getElementById('projectTitle').value;
-            dict['program'] = document.getElementById('program').value;
-            
-
-            // loop through each row of the table.
-            for (row = 1; row < myTab.rows.length - 1; row++) {
-                // loop through each cell in a row.
-                for (c = 0; c < myTab.rows[row].cells.length; c++) {
-                    var element = myTab.rows.item(row).cells[c];
-                    if (element.childNodes[0].getAttribute('type') == 'text') {
-                        arrValues.push(element.childNodes[0].value);
-                    }
-                }
-            }
-            dict['proponents'] = arrValues;
-            // finally, show the result in the console.
-            return dict;
-            
-            console.log(dict);
-        }
-
-        var id = document.getElementById('groupCode').value
-
-        $(document).ready(function () {
-            $("#submit").on("click", function() {
-                var js_data = JSON.stringify(submit());
-                $.ajax({
-                    url: "/edit_group/" + id,
-                    type : 'POST',
-                    contentType: 'application/json',
-                    dataType : 'json',
-                    data : js_data
-                }).done(function(result) {
-                    console.log(result);
-                    $("#data").html(result);
-                    console.log('SUCCESS')
-                    window.location.href = "/groups";
-                }).fail(function(jqXHR, textStatus, errorThrown) {
-                    console.log("fail: ",textStatus, errorThrown);
-                });
-            });
-        });
-    </script>
 {% endblock %}
