--- a/website/templates/admin/edit_student.html
+++ b/website/templates/admin/edit_student.html
@@ -8,7 +8,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/groups/" class="nav-link text-dark font-italic bg-light">
+        <a href="/groups/" class="nav-link text-dark font-italic">
             <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
         </a>
     </li>
@@ -18,7 +18,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/student/" class="nav-link text-dark font-italic">
+        <a href="/student/" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
@@ -27,20 +27,13 @@
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
-    <style>
-        table { width: 100%; }
-        table, th, td { border: solid 1px #DDD;
-            border-collapse: collapse; padding: 2px 3px; text-align: center;
-        }
-    </style>
-    
 {% endblock %}
 {% block content %}
     <div id="overlay">
         <div id="text">
             
             <div id='close_button' onclick="off()">
-                <a href='/panelist'>
+                <a href='/student'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
                 
@@ -50,7 +43,7 @@
                 <p>Edit Panel</p>
                 <form method='POST'>
                     <label for="userCode">User Code:</label>
-                    <input type='text' id='userCode' name='userCode' value ="{{ to_edit.id }}" disabled><br>
+                    <input type='text' id='userCode' name='userCode' value ="{{ to_edit.stud_no }}" disabled><br>
 
                     <label for="lastName">Last Name</label>
                     <input type='text' id='lastName' name='lastName' value="{{ to_edit.last_name }}"><br>
@@ -68,7 +61,8 @@
                         <option value='FEU Diliman' {% if to_edit.school == 'FEU Diliman' %}selected {% endif %}>FEU Diliman</option>
                     </select>
                     <br>
-
+                    <label for="groupID">Group ID:</label>
+                    <input type='text' id='groupID' name='groupID' value="{{ to_edit.group_id }}"><br>
                     <button type='submit' id='submit' name='submit'>Submit</button>
                 </form>
                 
@@ -77,27 +71,22 @@
     </div>
 
 
-    <div class='create_button'>
-        <button>Create New Panelist</button>
-    </div>
-
     <div class='display_grid'>
-        {% if panels %}
-            {% for panel in panels %}
+        {% if students %}
+            {% for student in students %}
                 <div class='box'>
-                    <p>ID: {{ panel.id }}</p>
-                    <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                    <p>School: {{ panel.school }}</p>
+                    <p>ID: {{student.stud_no}}</p>
+                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
+                    <p>Group: {{ student.group_id }}</p>
+                    <p>Group Name: {{ student.group.name }}</p>
                     <br>
                 </div>
-                
             {% endfor %}
         {% endif %}
     </div>
+    
 
+    
     <script>
-        var arrValues = new Array();
-        var arrHead = new Array();
-        var dict = {}
     </script>
 {% endblock %}
