--- a/website/templates/admin/new_panel.html
+++ b/website/templates/admin/new_panel.html
@@ -80,17 +80,20 @@
         <button>Create New Panelist</button>
     </div>
 
-    {% if panels %}
-        {% for panel in panels %}
-            <div class='box'>
-                <p>ID: {{ panel.id }}</p>
-                <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                <p>School: {{ panel.school }}</p>
-                <br>
-            </div>
-            
-        {% endfor %}
-    {% endif %}
+    <div class='display_grid'>
+        {% if panels %}
+            {% for panel in panels %}
+                <div class='box'>
+                    <p>ID: {{ panel.id }}</p>
+                    <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                    <p>School: {{ panel.school }}</p>
+                    <br>
+                </div>
+                
+            {% endfor %}
+        {% endif %}
+    </div>
+    
 
     
     <script>
