--- a/website/templates/admin/delete_sched.html
+++ b/website/templates/admin/delete_sched.html
@@ -13,7 +13,7 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/panelist/" class="nav-link text-dark font-italic bg-light">
+        <a href="/panelist/" class="nav-link text-dark font-italic">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
         </a>
     </li>
@@ -23,17 +23,23 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/schedule/" class="nav-link text-dark font-italic">
+        <a href="/schedule/" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
+    <style>
+        table { width: 100%; }
+        table, th, td { border: solid 1px #DDD;
+            border-collapse: collapse; padding: 2px 3px; text-align: center;
+        }
+    </style>
+    
 {% endblock %}
 {% block content %}
-
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
-                <a href='/panelist'>
+                <a href='/schedule'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
             </div>
@@ -49,40 +55,36 @@
         </div>
     </div>
 
+
     <div class='create_button'>
-        <a href="/new_panel/">
-            <button onclick="on(); createTable()" >Create New Panelist</button>
-        </a>
+        <button>Create New Defense Schedule</button>
     </div>
 
     <div class='display_grid'>
-        {% if panels %}
-            {% for panel in panels %}
+        {% if defenses %}
+            {% for defense in defenses %}
                 <div class='box'>
-                    <p>ID: {{ panel.id }}</p>
-                    <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                    <p>School: {{ panel.school }}</p>
-                    <p>Defenses:</p>
-                    {% if panel.defenses %} 
-                        {% for defense in panel.defenses %}
-                            <p>    - {{ defense.group.name }} - {{ defense.start_date }}</p>
-                        {% endfor %}
-                    {% else %}
-                        <p>NOTHING SCHEDULED</p>
-                    {% endif %}
+                    <p>ID: {{ defense.id }}</p>
+                    <p>Group Name: {{ defense.group.name }} </p>
+                    <p>Panels:</p>
+                    {% for panel in defense.panels %}
+                        {% if panel.id == defense.head_panel_id: %}
+                            <p>    HP - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                        {% else: %}
+                            <p>    - {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
+                        {% endif %}
+                    {% endfor %}
+                    <p>Defense Date: {{ defense.start_date}}</p>
                     <br>
-                    <a href="/edit_panel/{{panel.id}}">
+                    <a href="/edit_sched/{{ defense.id }}">
                         <button>Edit</button>
                     </a>
-                    <a href="/delete_panel/{{panel.id}}">
+                    <a href="/delete_sched/{{ defense.id }}">
                         <button>Delete</button>
                     </a>
                 </div>
+                
             {% endfor %}
         {% endif %}
     </div>
-    
-
-    <script>
-    </script>
 {% endblock %}
