--- a/website/templates/admin/delete_student.html
+++ b/website/templates/admin/delete_student.html
@@ -13,12 +13,12 @@
         </a>
     </li>
     <li class="nav-item">
-        <a href="/panelist/" class="nav-link text-dark font-italic bg-light">
+        <a href="/panelist/" class="nav-link text-dark font-italic">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
         </a>
     </li>
     <li class="nav-item">
-        <a href="/student/" class="nav-link text-dark font-italic">
+        <a href="/student/" class="nav-link text-dark font-italic bg-light">
             <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
@@ -30,10 +30,11 @@
 {% endblock %}
 {% block content %}
 
+
     <div id="overlay">
         <div id="text">
             <div id='close_button' onclick="off()">
-                <a href='/panelist'>
+                <a href='/student'>
                     <img src="{{ url_for('static', filename='close.png') }}">
                 </a>
             </div>
@@ -49,40 +50,23 @@
         </div>
     </div>
 
-    <div class='create_button'>
-        <a href="/new_panel/">
-            <button onclick="on(); createTable()" >Create New Panelist</button>
-        </a>
-    </div>
 
     <div class='display_grid'>
-        {% if panels %}
-            {% for panel in panels %}
+        {% if students %}
+            {% for student in students %}
                 <div class='box'>
-                    <p>ID: {{ panel.id }}</p>
-                    <p>Name: {{ panel.last_name }}, {{ panel.first_name }} {{ panel.middle_in }}.</p>
-                    <p>School: {{ panel.school }}</p>
-                    <p>Defenses:</p>
-                    {% if panel.defenses %} 
-                        {% for defense in panel.defenses %}
-                            <p>    - {{ defense.group.name }} - {{ defense.start_date }}</p>
-                        {% endfor %}
-                    {% else %}
-                        <p>NOTHING SCHEDULED</p>
-                    {% endif %}
+                    <p>ID: {{student.stud_no}}</p>
+                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
+                    <p>Group: {{ student.group_id }}</p>
+                    <p>Group Name: {{ student.group.name }}</p>
                     <br>
-                    <a href="/edit_panel/{{panel.id}}">
-                        <button>Edit</button>
-                    </a>
-                    <a href="/delete_panel/{{panel.id}}">
-                        <button>Delete</button>
-                    </a>
                 </div>
             {% endfor %}
         {% endif %}
     </div>
     
 
+    
     <script>
     </script>
 {% endblock %}
