--- a/website/templates/admin/edit_group.html
+++ b/website/templates/admin/edit_group.html
@@ -76,15 +76,18 @@
         <button>Create New Group</button>
     </div>
 
-    {% if groups %}
-        {% for group in groups %}
-            <div class='box'
-                <p>ID: {{group.id}}</p>
-                <p>Group Name: {{group.name}}</p>
-                <p>Project Title: {{group.project_title}}</p>
-                <p>Program: {{group.program}}</p>
-                <br>
-            </div>
-        {% endfor %}
-    {% endif %}
+    <div class='display_grid'>
+        {% if groups %}
+            {% for group in groups %}
+                <div class='box'
+                    <p>ID: {{group.id}}</p>
+                    <p>Group Name: {{group.name}}</p>
+                    <p>Project Title: {{group.project_title}}</p>
+                    <p>Program: {{group.program}}</p>
+                    <br>
+                </div>
+            {% endfor %}
+        {% endif %}
+    </div>
+    
 {% endblock %}
