--- a/website/templates/admin/student.html
+++ b/website/templates/admin/student.html
@@ -29,18 +29,28 @@
     </li>
 {% endblock %}
 {% block content %}
-    {% if students %}
-        {% for student in students %}
-            <div class='box'>
-                <p>ID: {{student.stud_no}}</p>
-                <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                <p>Group: {{ student.group_id }}</p>
-                <p>Group Name: {{ student.group.name }}</p>
-                <br>
-            </div>
-            
-        {% endfor %}
-    {% endif %}
+
+    <div class='display_grid'>
+        {% if students %}
+            {% for student in students %}
+                <div class='box'>
+                    <p>ID: {{ student.stud_no }}</p>
+                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
+                    <p>Group: {{ student.group_id }}</p>
+                    <p>Group Name: {{ student.group.name }}</p>
+                    <br>
+                    <a href="/edit_student/{{ student.stud_no }}">
+                        <button>Edit</button>
+                    </a>
+                    <a href="/delete_student/{{ student.stud_no }}">
+                        <button>Delete</button>
+                    </a>
+                </div>
+                
+            {% endfor %}
+        {% endif %}
+    </div>
+    
 
     
     <script>
