Major updates for user side

--- a/website/templates/user/base_user.html
+++ b/website/templates/user/base_user.html
@@ -1,7 +1,8 @@
 <html>
     <head>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-        <link rel='stylesheet' href="{{ url_for('static', filename='styles/style.css') }}">
+        <link rel='stylesheet' href="{{ url_for('static', filename ='user/user.css') }}">
+        <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
         <title>{% block title %}{% endblock %}</title>
     </head>
     <script>
@@ -19,7 +20,7 @@
             <div class="py-4 px-3 mb-4 bg-light">
                 <div class="media d-flex align-items-center"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556074849/avatar-1_tcnd60.png" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
                     <div class="media-body">
-                        <h4 class="m-0">Jason Doe</h4>
+                        <h4 class="m-0">{{ user.first_name}} {{ user.last_name }}</h4>
                         <p class="font-weight-light text-muted mb-0">Panelist</p>
                     </div>
                 </div>
@@ -28,7 +29,11 @@
             <ul class="nav flex-column bg-white mb-0">
                 {% block navigation %}
                 {% endblock %}
-                
+                <li class="nav-item">
+                    <a href="/logout/" class="nav-link text-danger font-italic">
+                <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Logout
+        </a>
+    </li>
             </ul>
         </div>
         <!-- End vertical navbar -->
@@ -45,7 +50,7 @@
         </div>
         <!-- End demo content -->
         
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
