--- a/website/templates/user/temp.html
+++ b/website/templates/user/temp.html
@@ -1,25 +1,25 @@
-{% extends "admin/base.html" %}
+{% extends "base_user.html" %}
 {% block title %}Home Page{% endblock %}
 {% block navigation %}
     <li class="nav-item">
         <!-- bg-light shows the selected -->
-        <a href="/home" class="nav-link text-dark font-italic bg-light">
-            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Home
+        <a href="/user_home/" class="nav-link text-dark font-italic bg-light">
+            <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Dashboard
         </a>
     </li>
     <li class="nav-item">
-        <a href="/groups/" class="nav-link text-dark font-italic">
+        <a href="/user_groups/" class="nav-link text-dark font-italic">
             <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
         </a>
     </li>
     <li class="nav-item">
-        <a href="/panelist/" class="nav-link text-dark font-italic">
-            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelist
+        <a href="/user_panelists/" class="nav-link text-dark font-italic">
+            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
         </a>
     </li>
     <li class="nav-item">
-        <a href="/schedule/" class="nav-link text-dark font-italic">
-            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedule
+        <a href="/user_students/" class="nav-link text-dark font-italic">
+            <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
         </a>
     </li>
 {% endblock %}
