Added login and logout security

--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -20,7 +20,7 @@
             <div class="py-4 px-3 mb-4 bg-light">
                 <div class="media d-flex align-items-center"><img src="https://res.cloudinary.com/mhmd/image/upload/v1556074849/avatar-1_tcnd60.png" alt="..." width="65" class="mr-3 rounded-circle img-thumbnail shadow-sm">
                     <div class="media-body">
-                        <h4 class="m-0">Jason Doe</h4>
+                        <h4 class="m-0">ADMIN</h4>
                         <p class="font-weight-light text-muted mb-0">Admin</p>
                     </div>
                 </div>
@@ -29,7 +29,9 @@
             <ul class="nav flex-column bg-white mb-0">
                 {% block navigation %}
                 {% endblock %}
-                
+                <li class="nav-item">
+                    <a href="/logout/" class="nav-link text-danger font-italic">
+                <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Logout
             </ul>
         </div>
         <!-- End vertical navbar -->
