--- a/website/templates/user/home_u.html
+++ b/website/templates/user/home_u.html
@@ -35,6 +35,9 @@
                 {% for member in defense.group.members %}
                     <p>{{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</p>
                 {% endfor%}
+                <a href="">
+                    <button>Score Sheet</button>
+                </a>
             </div>
         {% endfor %}
     </div>
