--- a/website/templates/admin/delete_student.html
+++ b/website/templates/admin/delete_student.html
@@ -27,6 +27,16 @@
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Gradesheets
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Rubrics
+        </a>
+    </li>
 {% endblock %}
 {% block content %}
 
