--- a/website/templates/admin/edit_group.html
+++ b/website/templates/admin/edit_group.html
@@ -27,6 +27,16 @@
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Gradesheets
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Rubrics
+        </a>
+    </li>
     <style>
         table { width: 100%; }
         table, th, td { border: solid 1px #DDD;
