--- a/website/templates/admin/home.html
+++ b/website/templates/admin/home.html
@@ -27,6 +27,16 @@
             <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Schedules
         </a>
     </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Gradesheets
+        </a>
+    </li>
+    <li class="nav-item">
+        <a href="" class="nav-link text-dark font-italic">
+            <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Rubrics
+        </a>
+    </li>
 {% endblock %}
 {% block content %}
     <!-- <button id="sidebarCollapse" type="button" class="btn btn-light bg-white rounded-pill shadow-sm px-4 mb-4">
