--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -13,11 +13,6 @@
             });
         });
 
-        function myFunction() {
-            var element = document.getElementsByClassName("nav-link");
-            element.classList.add("mystyle");
-        }
-
         $(document).ready(function(){
             var path = window.location.pathname;
             var target = $('li a[href="' + path + '"]')
@@ -89,7 +84,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="" name='rubrics' class="nav-link text-dark font-italic">
+                    <a href="/rubrics/" name='rubrics' class="nav-link text-dark font-italic">
                         <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Rubrics
                     </a>
                 </li>
