--- a/website/templates/admin/rubrics.html
+++ b/website/templates/admin/rubrics.html
@@ -2,19 +2,31 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
 
+    <div class='create_button'>
+        <a href="/new_rubric/">
+            <button>Create New Rubric</button>
+        </a>
+    </div>
+
     <div class='display_grid'>
-        {% if students %}
-            {% for student in students %}
+        {% if rubrics %}
+            {% for rubric in rubrics %}
                 <div class='box'>
-                    <p>ID: {{ student.stud_no }}</p>
-                    <p>Name: {{ student.last_name }}, {{ student.first_name }} {{ student.middle_in }}.</p>
-                    <p>Group: {{ student.group_id }}</p>
-                    <p>Group Name: {{ student.group.name }}</p>
+                    <p>ID: {{ rubric.id }}</p>
+                    <p>Description: {{ rubric.desc }}</p>
+                    <p>Rate 5: {{ rubric.rate5 }}</p>
+                    <p>Rate 4: {{ rubric.rate4 }}</p>
+                    <p>Rate 3: {{ rubric.rate3 }}</p>
+                    <p>Rate 2: {{ rubric.rate2 }}</p>
+                    <p>Rate 1: {{ rubric.rate1 }}</p>
+                    <p>Weight: x{{ rubric.weight }}</p>
+                    <p>Rubric Type: {{ rubric.rubric_type }}</p>
+                    <p>PBL Level: {{ rubric.pbl_lvl }}</p>
                     <br>
-                    <a href="/edit_student/{{ student.stud_no }}">
+                    <a href="/edit_rubric/{{ rubric.id }}">
                         <button>Edit</button>
                     </a>
-                    <a href="/delete_student/{{ student.stud_no }}">
+                    <a href="">
                         <button>Delete</button>
                     </a>
                 </div>
@@ -22,8 +34,6 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-
     
     <script>
     </script>
