--- a/website/templates/user/base_user.html
+++ b/website/templates/user/base_user.html
@@ -12,7 +12,30 @@
                 $('#sidebar, #content').toggleClass('active');
             });
         });
+
+        $(document).ready(function(){
+            var path = window.location.pathname;
+            var target = $('li a[href="' + path + '"]')
+            console.log(window.location.pathname)
+            console.log(target)
+            target.addClass('active')
+        });
     </script>
+
+    <style>
+        table { width: 100%; }
+        table, th, td { border: solid 1px #DDD;
+            border-collapse: collapse; padding: 2px 3px; text-align: center;
+        }
+
+        .active {
+            background-color:#dbdbdb;
+        }
+
+        .active:hover {
+            box-shadow: inset 0 0 100px 100px rgba(255, 255, 255, 0.1);
+        }
+    </style>
 
     <body>
         <!-- Vertical navbar -->
@@ -27,17 +50,35 @@
             </div>
 
             <ul class="nav flex-column bg-white mb-0">
-                {% block navigation %}
-                {% endblock %}
+                <li class="nav-item">
+                    <!-- bg-light shows the selected -->
+                    <a href="/user_home/" class="nav-link text-dark font-italic">
+                        <i class="fa fa-th-large mr-3 text-primary fa-fw"></i>Dashboard
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/user_groups/" class="nav-link text-dark font-italic">
+                        <i class="fa fa-address-card mr-3 text-primary fa-fw"></i>Groups
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/user_panelists/" class="nav-link text-dark font-italic">
+                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Panelists
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a href="/user_students/" class="nav-link text-dark font-italic">
+                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Students
+                    </a>
+                </li>
                 <li class="nav-item">
                     <a href="/logout/" class="nav-link text-danger font-italic">
-                <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Logout
-        </a>
-    </li>
+                        <i class="fa fa-cubes mr-3 text-primary fa-fw"></i>Logout
+                    </a>
+                </li>
             </ul>
         </div>
         <!-- End vertical navbar -->
-
 
 
         <!-- Page content holder -->
