--- a/website/templates/admin/delete_rubric.html
+++ b/website/templates/admin/delete_rubric.html
@@ -1,11 +1,31 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+
 {% block content %}
 
     <div class='create_button'>
-        <a href="/new_rubric/">
+        <a href="">
             <button>Create New Rubric</button>
         </a>
+    </div>
+
+    <div id="overlay">
+        <div id="text">
+            <div id='close_button' onclick="off()">
+                <a href='/rubrics'>
+                    <img src="{{ url_for('static', filename='close.png') }}">
+                </a>
+            </div>
+
+            <div>
+                <p>Are you sure you?</p>
+                <form method='POST'>
+                    <button id='submit' name='submit' value='yes'>Yes</button>
+                    <button id='submit' name='submit' values='no'>No</button>
+                </form>
+                
+            </div>
+        </div>
     </div>
 
     <div class='display_grid'>
@@ -26,7 +46,7 @@
                     <a href="/edit_rubric/{{ rubric.id }}">
                         <button>Edit</button>
                     </a>
-                    <a href="/delete_rubric/ {{ rubric.id }}">
+                    <a href="">
                         <button>Delete</button>
                     </a>
                 </div>
@@ -34,7 +54,4 @@
             {% endfor %}
         {% endif %}
     </div>
-    
-    <script>
-    </script>
 {% endblock %}
