--- a/website/templates/admin/admin.html
+++ b/website/templates/admin/admin.html
@@ -79,7 +79,7 @@
                     </a>
                 </li>
                 <li class="nav-item">
-                    <a href="" name='gradesheets' class="nav-link text-dark font-italic">
+                    <a href="/gradesheets/" name='gradesheets' class="nav-link text-dark font-italic">
                         <i class="fa fa-picture-o mr-3 text-primary fa-fw"></i>Gradesheets
                     </a>
                 </li>
