--- a/website/templates/admin/gradesheet.html
+++ b/website/templates/admin/gradesheet.html
@@ -1,5 +1,6 @@
 {% extends "admin.html" %}
 {% block title %}Home Page{% endblock %}
+
 {% block content %}
     <div class='create_button'>
         <a href="/new_sheet/">
@@ -8,29 +9,28 @@
     </div>
 
     <div class='display_grid'>
-        {% if groups %}
-            {% for group in groups %}
-                <div class='box'
-                    <p>ID: {{group.id}}</p>
-                    <p>Group Name: {{group.name}}</p>
-                    <p>Project Title: {{ group.project_title }}</p>
-                    <p>Program: {{group.program}}</p>
-                    <p>Members:</p>
-                    {% for member in group.members %}
-                        <p>{{ member.stud_no }} - {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</p>
-                    {% endfor%}
-                    <p>Defenses:</p>
-                    {% for defense in group.defenses %}
-                        <p>{{ defense.id }} - {{ defense.start_date }} </p>
-                    {% endfor%}
-                    <a href="/edit_group/{{group.id}}">
+        {% if templates %}
+            {% for template in templates %}
+                <div class='box'>
+                    <p>ID: {{ template.id }}</p>
+                    <p>Gradesheet Type: {{ template.sheet_type }}</p>
+
+                    <a href="/view_sheet/{{ template.id }}">
+                        <button>View</button>
+                    </a>
+
+                    <a href="">
                         <button>Edit</button>
                     </a>
-                    <a href="/delete_group/{{group.id}}">
+                    <a href="">
                         <button>Delete</button>
                     </a>
                 </div>
             {% endfor %}
         {% endif %}
     </div>
+
+    
+    
+
 {% endblock %}
