--- a/website/templates/admin/new_sheet.html
+++ b/website/templates/admin/new_sheet.html
@@ -2,7 +2,7 @@
 {% block title %}Home Page{% endblock %}
 {% block content %}
     <div class='create_button'>
-        <a href="/new_group/">
+        <a href="">
             <button>Create New Gradesheet Template</button>
         </a>
     </div>
@@ -51,22 +51,18 @@
         </div>
     </div>
 
-    <!-- <div class='display_grid'>
-        {% if groups %}
-            {% for group in groups %}
-                <div class='box'
-                    <p>ID: {{group.id}}</p>
-                    <p>Group Name: {{group.name}}</p>
-                    <p>Project Title: {{ group.project_title }}</p>
-                    <p>Program: {{group.program}}</p>
-                    <p>Members:</p>
-                    {% for member in group.members %}
-                        <p>{{ member.stud_no }} - {{ member.last_name }}, {{ member.first_name }} {{ member.middle_in }}.</p>
-                    {% endfor%}
-                    <p>Defenses:</p>
-                    {% for defense in group.defenses %}
-                        <p>{{ defense.id }} - {{ defense.start_date }} </p>
-                    {% endfor%}
+
+    <div class='display_grid'>
+        {% if templates %}
+            {% for template in templates %}
+                <div class='box'>
+                    <p>ID: {{ template.id }}</p>
+                    <p>Gradesheet Type: {{ template.sheet_type }}</p>
+
+                    <a href="/view_sheet/{{ template.id }}">
+                        <button>View</button>
+                    </a>
+
                     <a href="">
                         <button>Edit</button>
                     </a>
@@ -76,7 +72,7 @@
                 </div>
             {% endfor %}
         {% endif %}
-    </div> -->
+    </div>
 
     <script>
         $(document).ready(function(){
