--- a/website/static/admin/indiv_sheet.css
+++ b/website/static/admin/indiv_sheet.css
@@ -40,10 +40,8 @@ table{
 	
 }
 
-table, th, td{
-	
-}
-
+tr:nth-child(even) {
+	background-color: #f2f2f2;}
 th{
 	background: green;
 }
@@ -176,18 +174,5 @@ border-radius: 0px 0px 0px 15px}
 	border-radius: 15px 15px 0px 15px; 
 	border-width: 0px 0px;
 }
-
-.div107 { grid-area: 22 / 17 / auto / 18;}
-.div108 { grid-area: 22 / 18 / auto / 19;}
-.div109 { grid-area: 22 / 19 / auto / 20;}
-.div110 { grid-area: 22 / 20 / auto / 21;}
-.div111 { grid-area: 23 / 14 / auto / 17;
-	border-radius: 0px 0px 0px 15px;
-}
-.div112 { grid-area: 23 / 17 / auto / 18;}
-.div113 { grid-area: 23 / 18 / auto / 19;}
-.div114 { grid-area: 23 / 19 / auto / 20;}
-.div115 { grid-area: 23 / 20 / auto / 21;
-	border-radius: 0px 0px 15px 0px;}
 .div116 { grid-area: 24 / 14 / auto / 21; 
 border-radius: 15px 15px 15px 15px; }
